# db_postgres_hw7

./: README.md  cli_crud.py  config.ini  crud.py  db_connect.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 3e65deee53f7_init.py
